--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -232,6 +232,8 @@ dataSources:
       eventHandlers:
         - event: Buy(uint256,uint256,address)
           handler: handleBuy
+        - event: DustReturned(uint256,uint256,address)
+          handler: handleDustReturned
         - event: Sell(uint256,uint256,address)
           handler: handleSell
         - event: Swap(uint256,uint256,address)
