--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "deploy-rinkeby-shared": "graph deploy --product hosted-service nftx-project/nftx-v2-rinkeby",
     "deploy-goerli-shared": "graph deploy --product hosted-service nftx-project/nftx-v2-goerli",
     "deploy-mainnet-shared": "graph deploy --product hosted-service nftx-project/nftx-v2",
+    "deploy-mainnet-shared-legacy": "graph deploy --product hosted-service nftx-project/nftx-v2-legacy",
     "deploy-mainnet-shared-test": "graph deploy --product hosted-service nftx-project/nftx-v2-source",
     "deploy-arbitrum-shared": "graph deploy --product hosted-service nftx-project/nftx-v2-arbitrum",
     "deploy-arbitrum-nftx": "graph deploy --ipfs http://116.202.19.181:5001 --node http://116.202.19.181:8020 nftx-hosted/nftx-v2-arbitrum ",
