--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "format": "prettier --ignore-path .gitignore --write \"{*,**/*}.{ts,json,md}\""
   },
   "dependencies": {
-    "@graphprotocol/graph-ts": "0.27.0",
-    "@graphprotocol/graph-cli": "0.33.1",
+    "@graphprotocol/graph-ts": "^0.29.3",
+    "@graphprotocol/graph-cli": "0.45.0",
     "mustache": "4.2.0"
   },
   "devDependencies": {
